# inflow

./: .clang-tidy  .gitignore  README.md  flake.nix  inflow.cpp  inflow.py  pyproject.toml
pkgs/python-inflow/: default.nix
src/inflow/: __init__.py  inflow.py
